--- a/burgerQueen/src/app/mesero/carta/carta.component.scss
+++ b/burgerQueen/src/app/mesero/carta/carta.component.scss
@@ -110,11 +110,32 @@ $color-rosa: #FF8087;
         padding: 0px 4px 1px 4px;
     }
 }
+
 /*---------------------*/
 
-img{
+.picture{
+    display: flex;
     width: 100%;
     height: 160px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    position: relative;
+
+    i{
+        display: none;
+        position: absolute;
+        font-size: 1.5em;
+        color: $color-rosa;
+        z-index: 2;
+        top: 10px;
+        right: 10px;
+    }
+    img{
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
 }
 
 /*---------------------*/
