--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -1,7 +1,7 @@
 <div class="containerOptionsLetter">
   <h2>OPCIONES</h2>
   <div class="containerOptions">
-    <p>{{ titleHamburger }}</p>
+    <p class="title">{{ titleHamburger }}</p>
     <div class="divOptions">
       <img src="../../../assets/imagenes/img-carta/{{ imgHamburger }}" alt="Hamburguesa" class="imgHamburger">
       <div class="selects">
