--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -17,7 +17,7 @@
                     </div>
                     <img src="../../../assets/imagenes/img-carta/{{ hamburguesa.img }}">
                     <input type="button" value="Ver opciones" class="btn" (click)="getHamburgerData(hamburguesa)"
-                        routerLink="/cartaOpciones" routerLinkActive="activebutton">
+                        [routerLink]="['/cartaOpciones']" routerLinkActive="activebutton">
                 </div>
             </div>
 
@@ -28,7 +28,7 @@
                         <h3>S/.{{ sandwich.price }} </h3>
                     </div>
                     <img src="../../../assets/imagenes/img-carta/{{ sandwich.img }}">
-                    <input type="button" value="Añadir" (click)="getSandwichData(sandwich)" 
+                    <input type="button" value="Añadir" class="btn" (click)="getSandwichData(sandwich)" 
                     routerLink="/pedidosMesero" routerLinkActive="activebutton">
                 </div>
             </div>
