--- a/burgerQueen/src/app/shared/navegador/navegador.component.html
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.html
@@ -1,1 +1,6 @@
-<p>navegador works!</p>
+<div id="navbar">
+    <i class="fa-solid fa-burger"></i>
+    <i class="fa-solid fa-utensils"></i>
+    <i class="fa-solid fa-file-import"></i>    
+    <i class="fa-solid fa-clipboard-list"></i>
+</div>
