Corrección de ícono de email en vista 'Login'

--- a/burgerQueen/src/app/ingreso/login/login.component.scss
+++ b/burgerQueen/src/app/ingreso/login/login.component.scss
@@ -89,7 +89,8 @@ h2{
 }
 .emailLogin{
   background-image: url(../../../assets/imagenes/img-login-welcome/icon-email.png);
-  background-position: 13.25rem;
+  background-position: 13rem;
   background-size: 1.5rem;
+  background-repeat: no-repeat;
   margin-bottom: 0.8rem;
 }
