--- a/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
+++ b/burgerQueen/src/app/administrador/gestion-usuarios/gestion-usuarios.component.html
@@ -1,8 +1,10 @@
 <section>
-  <h2></h2>
+  <h2>Gestión de Usuarios</h2>
+  <hr>
   <button onclick="document.getElementById('btnModal').style.display='block'" >
     <i class="fa-solid fa-user-plus"></i>
-    Nuevo usuario
+    <h4> Nuevo usuario</h4>
+   
   </button>
   <i class="fa-solid fa-circle-plus"></i>
 </section>
