--- a/burgerQueen/src/app/mesero/carta/carta.component.html
+++ b/burgerQueen/src/app/mesero/carta/carta.component.html
@@ -1,93 +1,96 @@
 <div id="cartaView">
 
-<app-navegador></app-navegador>
+    <app-navegador></app-navegador>
 
-<div class="carta">
-    <section id="cartaSection1" [class.hidden]="booleanValue">
-        <div class="subtitle">
-            <h2>PLATOS</h2>
-            <hr>
+    <main>
+        <div class="carta">
+            <section id="cartaSection1" [class.hidden]="booleanValue">
+                <div class="subtitle">
+                    <h2>PLATOS</h2>
+                    <hr>
+                </div>
+                <section class="itemsSection">
+                    <div *ngFor="let hamburguesa of carta.hamburguesas">
+                        <div class="item">
+                            <div class="nameAndPrice">
+                                <h4 class="title"> {{ hamburguesa.title }} </h4>
+                                <h3>S/.{{ hamburguesa.price }} </h3>
+                            </div>
+                            <div class="picture">
+                                <i class="fa-solid fa-circle-check" [class.show]="booleanValue"></i>
+                                <img src="../../../assets/imagenes/img-carta/{{ hamburguesa.img }}">
+                            </div>
+                            <input type="button" value="Ver opciones" class="btn"
+                                (click)="getHamburgerData(hamburguesa)" [routerLink]="['/cartaOpciones']"
+                                routerLinkActive="activebutton">
+                        </div>
+                    </div>
+
+                    <div *ngFor="let sandwich of carta.sandwiches">
+                        <div class="item">
+                            <div class="nameAndPrice">
+                                <h4> {{ sandwich.title }} </h4>
+                                <h3>S/.{{ sandwich.price }} </h3>
+                            </div>
+                            <div class="picture">
+                                <i class="fa-solid fa-circle-check"></i>
+                                <img src="../../../assets/imagenes/img-carta/{{ sandwich.img }}">
+                            </div>
+                            <input type="button" value="Añadir" class="btn" (click)="getSandwichData(sandwich)"
+                                routerLink="/pedidosMesero" routerLinkActive="activebutton">
+                        </div>
+                    </div>
+                </section>
+
+                <div class="subtitle">
+                    <h2>APERITIVOS</h2>
+                    <hr>
+                </div>
+                <section class="itemsSection">
+                    <div *ngFor="let aperitivo of carta.aperitivos">
+                        <div class="item">
+                            <div class="nameAndPrice">
+                                <h4> {{ aperitivo.title }} </h4>
+                                <h3>S/.{{ aperitivo.price }} </h3>
+                            </div>
+                            <div class="picture">
+                                <i class="fa-solid fa-circle-check"></i>
+                                <img src="../../../assets/imagenes/img-carta/{{ aperitivo.img }}">
+                            </div>
+                            <input type="button" value="Añadir" class="btn" routerLink="/pedidosMesero"
+                                routerLinkActive="activebutton">
+                        </div>
+                    </div>
+                </section>
+            </section>
+
+            <section id="cartaSection2" [class.show]="booleanValue">
+                <div class="subtitle">
+                    <h2>BEBIDAS</h2>
+                    <hr>
+                </div>
+                <section class="itemsSection">
+                    <div *ngFor="let bebida of carta.bebidas">
+                        <div class="item">
+                            <div class="nameAndPrice">
+                                <h4> {{ bebida.title }} </h4>
+                                <h3>S/.{{ bebida.price }} </h3>
+                            </div>
+                            <div class="picture">
+                                <i class="fa-solid fa-circle-check"></i>
+                                <img src="../../../assets/imagenes/img-carta/{{ bebida.img }}"
+                                    routerLink="/pedidosMesero" routerLinkActive="activebutton">
+                            </div>
+                            <input type="button" value="Añadir" class="btn">
+                        </div>
+                    </div>
+                </section>
+            </section>
         </div>
-        <section class="itemsSection">
-            <div *ngFor="let hamburguesa of carta.hamburguesas">
-                <div class="item">
-                    <div class="nameAndPrice">
-                        <h4 class="title"> {{ hamburguesa.title }} </h4>
-                        <h3>S/.{{ hamburguesa.price }} </h3>
-                    </div>
-                    <div class="picture">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <img src="../../../assets/imagenes/img-carta/{{ hamburguesa.img }}">
-                    </div>
-                    <input type="button" value="Ver opciones" class="btn" (click)="getHamburgerData(hamburguesa)"
-                        [routerLink]="['/cartaOpciones']" routerLinkActive="activebutton">
-                </div>
-            </div>
 
-            <div *ngFor="let sandwich of carta.sandwiches">
-                <div class="item">
-                    <div class="nameAndPrice">
-                        <h4> {{ sandwich.title }} </h4>
-                        <h3>S/.{{ sandwich.price }} </h3>
-                    </div>
-                    <div class="picture">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <img src="../../../assets/imagenes/img-carta/{{ sandwich.img }}">
-                    </div>
-                    <input type="button" value="Añadir" class="btn" (click)="getSandwichData(sandwich)"
-                    routerLink="/pedidosMesero" routerLinkActive="activebutton">
-                </div>
-            </div>
-        </section>
-
-        <div class="subtitle">
-            <h2>APERITIVOS</h2>
-            <hr>
+        <div class="btnIcon">
+            <i class="fa-solid fa-circle-arrow-right" [class.rotate]="booleanValue" (click)="changeSection()"></i>
         </div>
-        <section class="itemsSection">
-            <div *ngFor="let aperitivo of carta.aperitivos">
-                <div class="item">
-                    <div class="nameAndPrice">
-                        <h4> {{ aperitivo.title }} </h4>
-                        <h3>S/.{{ aperitivo.price }} </h3>
-                    </div>
-                    <div class="picture">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <img src="../../../assets/imagenes/img-carta/{{ aperitivo.img }}">
-                    </div>
-                    <input type="button" value="Añadir" class="btn"
-                    routerLink="/pedidosMesero" routerLinkActive="activebutton">
-                </div>
-            </div>
-        </section>
-    </section>
-
-    <section id="cartaSection2" [class.show]="booleanValue">
-        <div class="subtitle">
-            <h2>BEBIDAS</h2>
-            <hr>
-        </div>
-        <section class="itemsSection">
-            <div *ngFor="let bebida of carta.bebidas">
-                <div class="item">
-                    <div class="nameAndPrice">
-                        <h4> {{ bebida.title }} </h4>
-                        <h3>S/.{{ bebida.price }} </h3>
-                    </div>
-                    <div class="picture">
-                        <i class="fa-solid fa-circle-check"></i>
-                        <img src="../../../assets/imagenes/img-carta/{{ bebida.img }}"
-                        routerLink="/pedidosMesero" routerLinkActive="activebutton">
-                    </div>
-                    <input type="button" value="Añadir" class="btn">
-                </div>
-            </div>
-        </section>
-    </section>
-</div>
-
-<div class="btnIcon">
-    <i class="fa-solid fa-circle-arrow-right" [class.rotate]="booleanValue" (click)="changeSection()"></i>
-</div>
+    </main>
 
 </div>
