--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -8,7 +8,7 @@
       [(ngModel)]="usuario.password">
     </div>
     <a [class]="'forgetPassword'">Olvide mi password</a>
-    <input type="submit" [class]="['buttonLogin']" routerLink="/gestionUsarios" 
+    <input type="submit" [class]="['buttonLogin']" routerLink="/gestionUsuarios" 
     routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()">
   </div>
 </div>
