arreglo de errores en la rutas

--- a/burgerQueen/src/app/ingreso/welcome/welcome.component.html
+++ b/burgerQueen/src/app/ingreso/welcome/welcome.component.html
@@ -5,5 +5,5 @@
     <!-- <input type="button" value="Iniciar sesión" id="btnWelcomeLogin" class="btnWelcomeLogin" 
     routerLink="/login" routerLinkActive="activebutton"> -->
 
-    <input type="button" value="Iniciar sesión" [class]="['btnWelcomeLogin']" routerLink="/login" routerLinkActive="activebutton">
+    <input type="button" value="Iniciar sesión" [class]="['btnWelcomeLogin']" routerLink="/ingreso/login" routerLinkActive="activebutton">
   </div>
