--- a/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.html
+++ b/burgerQueen/src/app/shared/datos-pedido/datos-pedido.component.html
@@ -1,1 +1,31 @@
-<p>datos-pedido works!</p>
+<section class="datosPedido">
+  <h4 class="fecha"> 12/03/2022 04:12pm</h4>
+  <div class="seccionCliente">
+    <label class="lblCliente">Cliente: </label>
+    <input type="text" class="cliente" >
+  </div>
+  <div class="seccionMesa">
+    <label class="lblMesa">Mesa: </label>
+      <select name="mesa" class="mesa">
+        <option value="m1">Mesa 1</option>
+        <option value="m2">Mesa 2</option>
+        <option value="m3">Mesa 3</option>
+        <option value="m4">Mesa 4</option>
+        <option value="m5">Mesa 5</option>
+        <option value="m6">Mesa 6</option>
+        <option value="m7">Mesa 7</option>
+        <option value="m8">Mesa 8</option>
+        <option value="m9">Mesa 9</option>
+        <option value="m10">Mesa 10</option>
+        <option value="m11">Mesa 11</option>
+        <option value="m12">Mesa 12</option>
+  </select>
+  </div>
+
+  <div class="costoPedido">
+    <h3 >TOTAL</h3>
+    <h3 class="total">S/ 23.00</h3>
+  </div>
+  <button class="btnEnviarOrden">Enviar Orden</button>
+
+</section>
