--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -4,11 +4,13 @@
     <input type="text" placeholder="Correo Electrónico" id="emailLogin" class="emailLogin">
     <div class="eye">
       <span class='iconEye'><i class="fas fa-eye-slash"></i></span>
-      <input type="password" placeholder="password" id="passLogin" class="passLogin" 
-      [(ngModel)]="usuario.password">
+      <!--input type="password" placeholder="password" id="passLogin" class="passLogin" 
+      [(ngModel)]="usuario.password"-->
+      <input type="password" placeholder="password" id="passLogin" class="passLogin" >
+    
     </div>
     <a [class]="'forgetPassword'">Olvide mi password</a>
-    <input type="submit" [class]="['buttonLogin']" routerLink="/gestionUsuarios" 
-    routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()">
+    <!--input type="submit" [class]="['buttonLogin']" routerLink="/view/principal" routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()"-->
+    <input type="submit" class="buttonLogin" routerLink="/view/principal">
   </div>
-</div>
+</div> 
