Probando corrección en el ruteo

--- a/burgerQueen/src/app/app.component.html
+++ b/burgerQueen/src/app/app.component.html
@@ -1,1 +1,12 @@
+<input type="button" routerLink="/" routerLinkActive="active" value="welcome">
+<input type="button" routerLink="/login" routerLinkActive="active" value="login">
+<input type="button" routerLink="/administrador" routerLinkActive="active" value="administrador">
+<input type="button" routerLink="/gestionUsuarios" routerLinkActive="active" value="gestionUsuarios">
+<input type="button" routerLink="/carta" routerLinkActive="active" value="carta">
+<input type="button" routerLink="/cartaOpciones" routerLinkActive="active" value="cartaOpciones">
+<input type="button" routerLink="/pedidosMesero" routerLinkActive="active" value="pedidosMesero">
+<input type="button" routerLink="/totalPedidosMesero" routerLinkActive="active" value="totalPedidosMesero">
+<input type="button" routerLink="/pedidosCocinero" routerLinkActive="active" value="pedidosCocinero">
+<input type="button" routerLink="/totalPedidosCocinero" routerLinkActive="active" value="totalPedidosMesero">
+
 <router-outlet></router-outlet>
