--- a/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
+++ b/burgerQueen/src/app/mesero/carta-opciones/carta-opciones.component.html
@@ -20,6 +20,6 @@
     <p>Subtotal</p>
     <p>S/.{{ priceHamburger }}</p>
     <input type="submit" class="buttonAddOptions" id="buttonAddOptions" value="Añadir" 
-        routerLink="/view/principal" routerLinkActive="activebutton">
+        routerLink="/pedidosMesero" routerLinkActive="activebutton">
   </div>
 </div>
