--- a/burgerQueen/src/app/shared/navegador/navegador.component.html
+++ b/burgerQueen/src/app/shared/navegador/navegador.component.html
@@ -1,7 +1,7 @@
 <div id="navbar">
     <img src="../../../assets/imagenes/img-carta/logo2.svg">
     <i class="fa-solid fa-list-check"></i>
-    <i class="fa-solid fa-utensils"></i>
+    <i class="fa-solid fa-utensils" routerLink="/pedidosMesero" routerLinkActive="active"></i>
     <i class="fa-solid fa-receipt"></i>
     <i class="fa-solid fa-money-check-dollar"></i>
 </div>
