--- a/burgerQueen/src/app/ingreso/login/login.component.html
+++ b/burgerQueen/src/app/ingreso/login/login.component.html
@@ -11,6 +11,6 @@
     </div>
     <a [class]="'forgetPassword'">Olvide mi password</a>
     <!--input type="submit" [class]="['buttonLogin']" routerLink="/view/principal" routerLinkActive="activebutton"  value="Ingresar" (click)="ingresar()"-->
-    <input type="submit" class="buttonLogin" routerLink="/view/principal">
+    <input type="submit" class="buttonLogin" routerLink="/carta">
   </div>
 </div> 
